# Pong_game

./: .gitignore  CMakeLists.txt  README.md
include/: Ball.hpp  Paddle.hpp
sources/: Ball.cpp  Paddle.cpp  main.cpp
